[gd_scene load_steps=6 format=3 uid="uid://c87xpcvmjksrj"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_ebmuu"]
[ext_resource type="PackedScene" uid="uid://b6xr6kww5ndcm" path="res://Scenes/card.tscn" id="2_v0n5p"]
[ext_resource type="Script" path="res://Scripts/playerui.gd" id="2_yjhvj"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_n0dqk"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_xytlc"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_ebmuu")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_n0dqk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("ConvexPolygonShape3D_xytlc")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.62534, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="Card" parent="Head/Camera3D" instance=ExtResource("2_v0n5p")]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0.383099, -0.146683, -0.633796)

[node name="PlayerUI" type="Control" parent="." node_paths=PackedStringArray("player_health_label", "stopwatch_label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("2_yjhvj")
player_health_label = NodePath("ColorRect2/HealthLabel")
stopwatch_label = NodePath("ColorRect3/TimerLabel")

[node name="ColorRect" type="ColorRect" parent="PlayerUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 0.705882)

[node name="ColorRect2" type="ColorRect" parent="PlayerUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -120.0
offset_right = 230.0
grow_vertical = 0
mouse_filter = 1
color = Color(0, 0, 0, 0.686275)

[node name="HealthLabel" type="Label" parent="PlayerUI/ColorRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -14.0
offset_right = 0.5
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
uppercase = true

[node name="ColorRect3" type="ColorRect" parent="PlayerUI"]
layout_mode = 1
offset_right = 230.0
offset_bottom = 120.0
mouse_filter = 1
color = Color(0, 0, 0, 0.686275)

[node name="TimerLabel" type="Label" parent="PlayerUI/ColorRect3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -14.0
offset_right = 0.5
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
uppercase = true

[node name="CardSwitchMenu" type="HBoxContainer" parent="PlayerUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -292.0
offset_top = -80.0
offset_right = 293.0
grow_horizontal = 2
grow_vertical = 0

[node name="Slot1" type="MarginContainer" parent="PlayerUI/CardSwitchMenu"]
layout_mode = 2

[node name="Panel" type="Panel" parent="PlayerUI/CardSwitchMenu/Slot1"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="SlotNumber" type="Label" parent="PlayerUI/CardSwitchMenu/Slot1/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "1"

[node name="MarginContainer" type="MarginContainer" parent="PlayerUI/CardSwitchMenu/Slot1"]
layout_mode = 2

[node name="Panel" type="Panel" parent="PlayerUI/CardSwitchMenu/Slot1/MarginContainer"]
layout_mode = 2

[node name="CardName" type="Label" parent="PlayerUI/CardSwitchMenu/Slot1/MarginContainer/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Slot2" type="MarginContainer" parent="PlayerUI/CardSwitchMenu"]
layout_mode = 2

[node name="Panel" type="Panel" parent="PlayerUI/CardSwitchMenu/Slot2"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="SlotNumber" type="Label" parent="PlayerUI/CardSwitchMenu/Slot2/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "2"

[node name="MarginContainer" type="MarginContainer" parent="PlayerUI/CardSwitchMenu/Slot2"]
layout_mode = 2

[node name="Panel" type="Panel" parent="PlayerUI/CardSwitchMenu/Slot2/MarginContainer"]
layout_mode = 2

[node name="CardName" type="Label" parent="PlayerUI/CardSwitchMenu/Slot2/MarginContainer/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Slot3" type="MarginContainer" parent="PlayerUI/CardSwitchMenu"]
layout_mode = 2

[node name="Panel" type="Panel" parent="PlayerUI/CardSwitchMenu/Slot3"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="SlotNumber" type="Label" parent="PlayerUI/CardSwitchMenu/Slot3/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "3"

[node name="MarginContainer" type="MarginContainer" parent="PlayerUI/CardSwitchMenu/Slot3"]
layout_mode = 2

[node name="Panel" type="Panel" parent="PlayerUI/CardSwitchMenu/Slot3/MarginContainer"]
layout_mode = 2

[node name="CardName" type="Label" parent="PlayerUI/CardSwitchMenu/Slot3/MarginContainer/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Slot4" type="MarginContainer" parent="PlayerUI/CardSwitchMenu"]
layout_mode = 2

[node name="Panel" type="Panel" parent="PlayerUI/CardSwitchMenu/Slot4"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="SlotNumber" type="Label" parent="PlayerUI/CardSwitchMenu/Slot4/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "4"

[node name="MarginContainer" type="MarginContainer" parent="PlayerUI/CardSwitchMenu/Slot4"]
layout_mode = 2

[node name="Panel" type="Panel" parent="PlayerUI/CardSwitchMenu/Slot4/MarginContainer"]
layout_mode = 2

[node name="CardName" type="Label" parent="PlayerUI/CardSwitchMenu/Slot4/MarginContainer/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Slot5" type="MarginContainer" parent="PlayerUI/CardSwitchMenu"]
layout_mode = 2

[node name="Panel" type="Panel" parent="PlayerUI/CardSwitchMenu/Slot5"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="SlotNumber" type="Label" parent="PlayerUI/CardSwitchMenu/Slot5/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "5"

[node name="MarginContainer" type="MarginContainer" parent="PlayerUI/CardSwitchMenu/Slot5"]
layout_mode = 2

[node name="Panel" type="Panel" parent="PlayerUI/CardSwitchMenu/Slot5/MarginContainer"]
layout_mode = 2

[node name="CardName" type="Label" parent="PlayerUI/CardSwitchMenu/Slot5/MarginContainer/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Slot6" type="MarginContainer" parent="PlayerUI/CardSwitchMenu"]
layout_mode = 2

[node name="Panel" type="Panel" parent="PlayerUI/CardSwitchMenu/Slot6"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="SlotNumber" type="Label" parent="PlayerUI/CardSwitchMenu/Slot6/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "6"

[node name="MarginContainer" type="MarginContainer" parent="PlayerUI/CardSwitchMenu/Slot6"]
layout_mode = 2

[node name="Panel" type="Panel" parent="PlayerUI/CardSwitchMenu/Slot6/MarginContainer"]
layout_mode = 2

[node name="CardName" type="Label" parent="PlayerUI/CardSwitchMenu/Slot6/MarginContainer/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Slot7" type="MarginContainer" parent="PlayerUI/CardSwitchMenu"]
layout_mode = 2

[node name="Panel" type="Panel" parent="PlayerUI/CardSwitchMenu/Slot7"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="SlotNumber" type="Label" parent="PlayerUI/CardSwitchMenu/Slot7/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "7"

[node name="MarginContainer" type="MarginContainer" parent="PlayerUI/CardSwitchMenu/Slot7"]
layout_mode = 2

[node name="Panel" type="Panel" parent="PlayerUI/CardSwitchMenu/Slot7/MarginContainer"]
layout_mode = 2

[node name="CardName" type="Label" parent="PlayerUI/CardSwitchMenu/Slot7/MarginContainer/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
